# what-the-chat

./: .env.example  .gitignore  README.md  fetch_discord_history.py  pyproject.toml  requirements.txt  summarize.py
.github/workflows/: check-lockfile.yaml  ci.yml  pr-tests.yaml  test.yml
apps/: launch_cli.py
scripts/: launch_cli.py
tests/: test_imports.py  test_llm_services.py  test_models.py  test_platforms_simple.py  test_utils.py
what_the_chat/: __init__.py  summarize.py
what_the_chat/llm/: __init__.py  chat.py  summarization.py
what_the_chat/models/: __init__.py  message.py
what_the_chat/utils/: __init__.py  formatting.py
